--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title >17 New Hotel Brands</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="CSSMain.css">
+  <link rel="stylesheet" href="cssmain.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
@@ -12,7 +12,6 @@
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed" rel="stylesheet">
 </head>
-
 
 <body ID="main">
   <!-- Below is top Nav bar for hotel brand links -->
