--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <div class="row" align="center">
   <div class="col-xs-6">
     <p><img class="button" src="Tru-hilton.jpg"></p>
-      <button type="button" class="btn btn-default btn-lg"><a href="Tru.html">Learn more about Tru</a></button>
+      <button type="button" class="btn btn-default btn-lg"><a href="tru.html">Learn more about Tru</a></button>
   </div>
   <div class="col-xs-6" align="center">
     <p><img class="button" src="canopy-hilton.jpg"></p>
