--- a/tru.html
+++ b/tru.html
@@ -3,11 +3,11 @@
 <head>
   <title >Tru by Hilton</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="CSSMain.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="http://use.fontawesome.com/f9001c39ac.js"></script>
+  <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed" rel="stylesheet">
@@ -53,7 +53,7 @@
 
     <div class="trudesription" align="center"> Tru by Hilton is the newest brand in Hilton's portfolio.
       It is a brand built around a millenial-mindset with the tech-savvy, budget-conscious, adventurous
-      traveler in mind.  The first property is expected to open in March 2017 in Oklahoma City. 
+      traveler in mind.  The first property is expected to open in March 2017 in Oklahoma City.
     </div>
 
     <!-- Carousel with 3 rotating pictures of each brand -->
