--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 <div class="row" align="center">
   <div class="col-xs-6">
     <p><img class="button" src="Tru-hilton.jpg"></p>
-      <button type="button" class="btn btn-default btn-lg"><a href="tru.html">Learn more about Tru</a></button>
+      <a href="tru.html" class="btn btn-default btn-lg">Learn more about Tru</a>
   </div>
   <div class="col-xs-6" align="center">
     <p><img class="button" src="canopy-hilton.jpg"></p>
-      <button type="button" class="btn btn-default btn-lg"><a href="canopy.html">Learn more about Canopy</a></button>  </div>
+        <a href="canopy.html" class="btn btn-default btn-lg">Learn more about Canopy</a>
 </div>
 
 
