--- a/tru.html
+++ b/tru.html
@@ -28,7 +28,7 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       </div>
     <ul class="nav navbar-nav navbar-center">
-      <li><a href="MainPage.html"> <i class="fa fa-bed fa-2x"></i></a></li>
+      <li><a href="index.html"> <i class="fa fa-bed fa-2x"></i></a></li>
       <li><a href="https://www.bestwestern.com/en_US.html">Best Western</a></li>
       <li><a href="http://carlsonrezidor.com/">Carlson Rezidor</a></li>
       <li><a href="https://www.ihg.com/evenhotels/hotels/us/en/reservation">IHG</a></li>
