late night edits

--- a/index.html
+++ b/index.html
@@ -93,15 +93,16 @@
 <hr>
 </hr>
 
+
 <div class="row" align="center">
   <div class="col-xs-4">
-    <p><a href="http://achotels.marriott.com/?scid=234b528e-c5fb-40b6-8695-703527ff585a/&utm_source=google&utm_medium=cpc&utm_term=a%20c%20hotels%20marriott&utm_campaign=core&ppc=ppc&nst=paid"</a><img src="AC.jpg"></p>
+    <p><a href="http://achotels.marriott.com/"><img src="AC.jpg"></a></p>
   </div>
   <div class="col-xs-4">
-    <p><a href="http://www.cordishotels.com/"</a><img src="Cordis.jpg"></p>
+    <p><a href="http://www.cordishotels.com/"><img src="Cordis.jpg"></a></p>
   </div>
   <div class="col-xs-4">
-    <p><a href="http://curiocollection3.hilton.com/en/index.html"</a><img src="curio.png"></p>
+    <p><a href="http://curiocollection3.hilton.com/en/index.html"><img src="curio.png"></a></p>
   </div>
 </div>
 
@@ -110,28 +111,13 @@
 
 <div class="row" align="center">
   <div class="col-xs-4">
-    <p><a href="https://www.ihg.com/evenhotels/hotels/us/en/reservation"</a><img src="EVEN.png"></p>
+    <p><a href="https://www.ihg.com/evenhotels/hotels/us/en/reservation"><img src="EVEN.png"></a></p>
   </div>
   <div class="col-xs-4">
-    <p><a href="http://graduatehotels.com/"</a><img src="graduate.png"></p>
+    <p><a href="http://graduatehotels.com/"><img src="graduate.png"></a></p>
   </div>
   <div class="col-xs-4">
-    <p><a href="https://www.hoteljen.com"</a><img src="jen.png"></p>
-  </div>
-</div>
-
-<p>
-</p>
-
-<div class="row" align="center">
-  <div class="col-xs-4">
-    <p><a href="https://centric.hyatt.com/en/hyattcentric.html"</a><img src="centric.png"></p>
-  </div>
-  <div class="col-xs-4">
-    <p><a href="http://moxy-hotels.marriott.com/"</a><img src="moxy.jpg"></p>
-  </div>
-  <div class="col-xs-4">
-    <p><a href="http://www.oecollection.com/"</a><img src="OE.jpg"></p>
+    <p><a href="https://www.hoteljen.com"><img src="jen.png"></a></p>
   </div>
 </div>
 
@@ -140,13 +126,13 @@
 
 <div class="row" align="center">
   <div class="col-xs-4">
-    <p><a href="https://www.pendryhotels.com/"</a><img src="pendry.jpg"></p>
+    <p><a href="https://centric.hyatt.com/en/hyattcentric.html"><img src="centric.png"></a></p>
   </div>
   <div class="col-xs-4">
-    <p><a href="http://www.properhotel.com/"</a><img src="proper.jpg"></p>
+    <p><a href="http://moxy-hotels.marriott.com/"><img src="moxy.jpg"></a></p>
   </div>
   <div class="col-xs-4">
-    <p><a href="http://www.quorvuscollection.com/"</a><img src="quorvus.png"></p>
+    <p><a href="http://www.oecollection.com/"><img src="OE.jpg"></a></p>
   </div>
 </div>
 
@@ -155,13 +141,28 @@
 
 <div class="row" align="center">
   <div class="col-xs-4">
-    <p><a href="https://www.radissonred.com/"</a><img src="radred.jpg"></p>
+    <p><a href="https://www.pendryhotels.com/"><img src="pendry.jpg"></a></p>
   </div>
   <div class="col-xs-4">
-    <p><a href="https://virginhotels.com/"</a><img src="Virgin.jpg"></p>
+    <p><a href="http://www.properhotel.com/"><img src="proper.jpg"></a></p>
   </div>
   <div class="col-xs-4">
-    <p><a href="http://www.bestwesterndevelopers.com/portfolio/vib.php"</a><img src="vib.jpg"></p>
+    <p><a href="http://www.quorvuscollection.com/"><img src="quorvus.png"></a></p>
+  </div>
+</div>
+
+<p>
+</p>
+
+<div class="row" align="center">
+  <div class="col-xs-4">
+    <p><a href="https://www.radissonred.com/"><img src="radred.jpg"></a></p>
+  </div>
+  <div class="col-xs-4">
+    <p><a href="https://virginhotels.com/"><img src="Virgin.jpg"></a></p>
+  </div>
+  <div class="col-xs-4">
+    <p><a href="http://www.bestwesterndevelopers.com/portfolio/vib.php"><img src="vib.jpg"></a></p>
   </div>
 </div>
 
@@ -174,20 +175,22 @@
 
 <!-- Bottom of page - About Me + Social Media Links -->
 
-<div class="row">
-  <div class="col-md-12"
-    <h1 ID="about"> About the Author: </h1>
-    <h2 ID="bio"> Beth Malin is a second year MBA student at Kellogg.
-    She has a background working in Education Technology at Google and this summer
-    pursued her internship at Hilton Worldwide.  Going forward, she is eager to
-    return to the technology space in a role that faces the hospitality industry. </h2>
-    <h3 class="connect" ID="connect">Connect with Beth:
-      <a href="https://www.facebook.com/Beth.Malin">| Facebook <i class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
-      <a href="https://www.linkedin.com/in/bethmalin">| LinkedIn <i class="fa fa-facebook-square" aria-hidden="true"></i> </a>
-      <a href="https://www.instagram.com/bams.grams/">| Instagram <i class="fa fa-instagram" aria-hidden="true"></i> |</a>
-    </h3>
+
+  <div class="col-md-12">
+    <p ID="about" align="left"> About the Author:
+      </p>
+    <p ID="bio" align="left"> Beth Malin is a second year MBA student at Kellogg.
+      She has a background working in Education Technology at Google and this summer
+      pursued her internship at Hilton Worldwide.  Going forward, she is eager to
+      return to the technology space in a role that faces the hospitality industry.
+      </p>
+    <p ID="connect" align="left">Connect with Beth:
+      <a href="https://www.facebook.com/Beth.Malin"> Facebook <i class="fa fa-linkedin-square"></i></a>
+      <a href="https://www.linkedin.com/in/bethmalin">| LinkedIn <i class="fa fa-facebook-square"></i></a>
+      <a href="https://www.instagram.com/bams.grams/">| Instagram <i class="fa fa-instagram"></i></a>
+      </p>
   </div>
-</div>
+
 
 </body>
 </html>
