--- a/canopy.html
+++ b/canopy.html
@@ -96,6 +96,9 @@
      </a>
    </div> <!-- Carousel -->
 
+<p align="center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/I3lake5YD8I" frameborder="0" allowfullscreen></iframe>
+</p>
 
    <div class="row">
      <div class="col-md-12"
