final night edits

--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 
 <div class="row" align="center">
   <div class="col-xs-6">
-    <p><img class="button" src="Tru-hilton.jpg"></p>
+    <p><img class="topimage" src="Tru-hilton.jpg"></p>
       <a href="tru.html" class="btn btn-default btn-lg">Learn more about Tru</a>
   </div>
   <div class="col-xs-6" align="center">
-    <p><img class="button" src="canopy-hilton.jpg"></p>
+    <p><img class="topimage" src="canopy-hilton.jpg"></p>
         <a href="canopy.html" class="btn btn-default btn-lg">Learn more about Canopy</a>
+  </div>
 </div>
-
 
 <p>
 </p>
