--- a/tru.html
+++ b/tru.html
@@ -51,10 +51,15 @@
   <div ID="title" align="center"> <a href="http://tru3.hilton.com/en/index.html">Tru by Hilton</a>
     </div>
 
-    <div class="trudesription" align="center"> Tru by Hilton is the newest brand in Hilton's portfolio.
+    <div class="trudesription" align="center">
+      <p> Tru by Hilton is the newest brand in Hilton's portfolio.
       It is a brand built around a millenial-mindset with the tech-savvy, budget-conscious, adventurous
       traveler in mind.  The first property is expected to open in March 2017 in Oklahoma City.
+      </p>
     </div>
+
+    <hr>
+    </hr>
 
     <!-- Carousel with 3 rotating pictures of each brand -->
 
@@ -92,8 +97,13 @@
     </div> <!-- Carousel -->
 
 <p align="center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/i53AO0SULSs" frameborder="0" allowfullscreen></iframe>
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/2xxni5NKVPc" frameborder="0" allowfullscreen></iframe>
 </p>
+
+
+    <hr>
+    </hr>
+
 
     <div class="row">
       <div class="col-md-12"
