--- a/canopy.html
+++ b/canopy.html
@@ -54,7 +54,7 @@
 
 <div class="canopydesription" align="center"> Canopy Hotels by Hilton were launched in October 2014.
   The first one opened in Reykjavik, Iceland in July of 2016.  It is a lifestyle brand with local flair
-  to embody the city that each property is in.
+  to embody the city of each property.
 </div>
 
 <hr>
